# stochbb

./: .gitmodules  CMakeLists.txt  affinetrafo_8hh_source.html  annotated.html  api.html  api_8hh_source.html  bug.html  chain_8hh_source.html  class_i_o_log_handler-members.html  class_i_o_log_handler.html  class_i_o_log_handler_obj-members.html  class_i_o_log_handler_obj.html  class_log_handler-members.html  class_log_handler.html  class_log_handler_obj-members.html  class_log_handler_obj.html  class_log_message-members.html  class_log_message.html  class_log_message_stream-members.html  class_log_message_stream.html  class_logger-members.html  class_logger.html  classes.html  classsbb_1_1_assumption_error-members.html  classsbb_1_1_assumption_error.html  classsbb_1_1_atomic_density-members.html  classsbb_1_1_atomic_density.html  classsbb_1_1_atomic_density_obj-members.html  classsbb_1_1_atomic_density_obj.html  classsbb_1_1_atomic_var-members.html  classsbb_1_1_atomic_var.html  classsbb_1_1_atomic_var_obj-members.html  classsbb_1_1_atomic_var_obj.html  classsbb_1_1_chain-members.html  classsbb_1_1_chain.html  classsbb_1_1_chain_obj-members.html  classsbb_1_1_chain_obj.html  classsbb_1_1_compound-members.html  classsbb_1_1_compound.html  classsbb_1_1_compound_obj-members.html  (+454 more)
R/: CMakeLists.txt  DESCRIPTION  NAMESPACE
R/R/: stochbb.R
R/man/: Container-class.Rd  Density-class.Rd  ExactSampler-class.Rd  Var-class.Rd  Var.Rd  affine.Rd  atomic.Rd  chain.Rd  compound.Rd  condchain.Rd  conditional.Rd  delta.Rd  derived.Rd  gamma.Rd  independent.Rd  invgamma.Rd  maximum.Rd  minimum.Rd  mixture.Rd  normal.Rd  stochbb-package.Rd  studt.Rd  uniform.Rd  weibull.Rd
R/src/: Makevars  module.cc
R/vignettes/: manual.pdf.asis
cmake/: FindEigen3.cmake  FindStochBB.cmake  FindSundialsIDA.cmake  FindSundialsNVector.cmake
doc/: Doxyfile  Doxyfile.latex
doc/manual/: abstract.tex  api.tex  apidoc.tex  arch.tex  article.tex  build.tex  cli.tex  codedoc.sty  data.tex  editorial.sty  example.dot  example.tex  example1.xml  example1_code.tex  example2.xml  ezreader.tex  gui.tex  introduction.tex  manual.tex  pod.tex  podFitCode.tex  pod_example.dot  pod_llfit.R  references.bib  summary.tex  supplement.tex  xml.tex
examples/: CMakeLists.txt  chain.R  chain.py  chisq.xml  comp.xml  compound.xml  condchain.R  condchain.py  directConvolution.py  example.xml  exgauss.xml  exp.xml  ezreader.py  gamma.xml  indep.xml  inhibition.xml  interval.py  minmax.xml  mixture.xml  plot.xml  pod.R  pod.py  pod.xml  range_estimate.R  range_estimate.py  simple_chain.xml
lib/: CMakeLists.txt  affinetrafo.cc  affinetrafo.hh  api.cc  api.hh  chain.cc  chain.hh  compound.cc  compound.hh  conditional.cc  conditional.hh  cputime.cc  cputime.hh  density.cc  density.hh  directmarginalsampler.cc  directmarginalsampler.hh  distribution.cc  distribution.hh  exactsampler.cc  exactsampler.hh  exception.cc  exception.hh  logger.cc  logger.hh  marginalsampler.cc  marginalsampler.hh  math.cc  math.hh  mersennetwister.hh  minmax.cc  minmax.hh  mixture.cc  mixture.hh  object.cc  object.hh  operators.cc  operators.hh  option_parser.cc  option_parser.hh  (+13 more)
python/: CMakeLists.txt  stochbb.i  test.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+50 more)
shared/: about.html  resources.qrc  stochbb.desktop
shared/i18n/: stochbb_de_DE.qm  stochbb_de_DE.ts
shared/ui/: MainWindow.qml
shared/xml/: network-1.0.xml
src/: CMakeLists.txt  assembler.cc  assembler.hh  edge.cc  edge.hh  logwindow.cc  logwindow.hh  main.cc  mainwindow.cc  mainwindow.hh  neteditwidget.cc  neteditwidget.hh  network.cc  network.hh  nodes.cc  nodes.hh  parameter.cc  parameter.hh  plot.cc  plot.hh  plotwindow.cc  plotwindow.hh  qnetview.cc  qnetview.hh
test/: CMakeLists.txt  compoundtest.cc  compoundtest.hh  convolutiontest.cc  convolutiontest.hh  exactsamplertest.cc  exactsamplertest.hh  main.cc
